# backerup

./: .gitignore  BackFile.cpp  CMakeLists.txt  ConfigManager.cpp  InputManager.cpp  Makefile  README.md  VaultManager.cpp  backerup  backerup.cpp  backerup.ilk  backup.cpp  backup.h  backups  config.xml  main.cpp  test.txt  test2.txt  vault.xml
dependencies/tiny/: tinyxml2.lib
includes/: backfile.h  backup.h  configmanager.h  inputmanager.h  vaultmanager.h
